# web_daemon

./: .appveyor.yml  .gitignore  .travis.yml  build.pl  download.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  MsgDef.h  PipeClient.h  PipeClient_linux.cpp  PipeClient_unix.cpp  PipeClient_win32.cpp  PipeServer.h  PipeServer_linux.cpp  PipeServer_unix.cpp  PipeServer_win32.cpp  Process.h  Process_linux.cpp  Process_unix.cpp  Process_win32.cpp  SharedMemory.h  SharedMemory_unix.cpp  SharedMemory_win32.cpp
src/common/tests/: CMakeLists.txt  main.cpp  test_common.h  test_pipe.cpp  test_process.cpp  test_shared_memory.cpp
src/web_client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  main.cpp
src/web_daemon/: CMakeLists.txt  WebApp.cpp  WebApp.h  WebPage.cpp  WebPage.h  WebView.cpp  WebView.h  gst_plugins.cpp  main.cpp  moc_WebApp.cpp  moc_WebPage.cpp  moc_WebView.cpp
