cmake_minimum_required(VERSION 2.8.4)
project(web_app)

set(CMAKE_CXX_STANDARD 11)

set(SDL_STATIC ON)

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    if (UNIX)
	if (APPLE)
		include_directories(libs/Qt/macos/include)
        	link_directories(libs/Qt/macos/libs)
	else()
        	include_directories(libs/Qt/linux/include)
        	link_directories(libs/Qt/linux/bin)
	endif()
    else()
        include_directories(libs/Qt/vs2015_x64/include)
        link_directories(libs/Qt/vs2015_x64/libs)
    endif()
else(CMAKE_SIZEOF_VOID_P EQUAL 8)
    include_directories(libs/Qt/vs2017/include)
    link_directories(libs/Qt/vs2017/libs)
endif()

if(WIN32)
    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
        set(SDL2_INCLUDE_DIRS libs/SDL2/i686-w64-mingw32/include)
        set(SDL2_LIBRARIES "libs/SDL2/i686-w64-mingw32/lib")
    elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
        if(CMAKE_SIZEOF_VOID_P EQUAL 8)
            set(SDL2_LIBRARIES "libs/SDL2/lib/x64")
        else(CMAKE_SIZEOF_VOID_P EQUAL 8)
            set(SDL2_LIBRARIES "libs/SDL2/lib/x86")
        endif()
        set(SDL2_INCLUDE_DIRS libs/SDL2/include)
    endif()
else(WIN32)
    include(FindPkgConfig)
    pkg_search_module (SDL2 REQUIRED sdl2)

	if(APPLE)
		set(SDL2_INCLUDE_DIRS /usr/local/include)
		set(SDL2_LIBRARIES /usr/local/lib)
	endif(APPLE)
endif(WIN32)

include_directories(libs)
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(.)

link_directories(${SDL2_LIBRARIES})

enable_testing()

add_subdirectory(common)
add_subdirectory(web_client)
add_subdirectory(web_daemon)
